SERVER-43308 Documents created for mqlrun should use owned BSON.

GitOrigin-RevId: 51b0ae39171a3ff00c32439650cccaf02f0f4b35